--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
             "url": "https://packages.drupal.org/8"
         }
     },
+    "extra": {
+        "patches": {
+            "drupal/default_content" : {
+                "2698425 - Do not reimport existing entities": "https://www.drupal.org/files/issues/2020-02-05/2698425--accept-content-updates--122.patch"
+            }
+        }
+    },
     "require": {
         "drupal/default_content": "^1.0@alpha",
-        "drupal/commerce": "2.16",
-        "drupal/commerce_addon": "^1.0@alpha",
-        "openy/openy_prgf_sidebar_menu": "dev-master",
-        "openy/openy_block_modal": "dev-master",
-        "openy/paragraph_skins": "dev-master",
-        "drupal/commerce_cart_api": "1.x-dev",
-        "drupal/swiftmailer": "^2.0",
-        "drupal/mailsystem": "^4.3"
+        "openy/openy_memberships": "dev-master"
     }
 }
