--- a/openy_memberships_demo.info.yml
+++ b/openy_memberships_demo.info.yml
@@ -1,7 +1,7 @@
 name: 'Open Y Memberships Demo'
 description: Provides demo content for Open Y Memberships.
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - openy_memberships
   - default_content
