--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,6 @@
     },
     "require": {
         "drupal/default_content": "^1.0@alpha",
-        "openy/openy_memberships": "^1.0.0"
+        "openy/openy_memberships": "^1 || ^2"
     }
 }
