--- a/openy_memberships_demo.info.yml
+++ b/openy_memberships_demo.info.yml
@@ -1,8 +1,9 @@
 name: 'Open Y Memberships Demo'
 description: Provides demo content for Open Y Memberships.
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9 || ^10
+package: YMCA Website Services
 dependencies:
   - openy_memberships
-  - default_content
+  - drupal:default_content
 core_incompatible: false
