--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     },
     "require": {
-        "drupal/default_content": "^2.0@alpha || ^2.0 || ^1.0@alpha",
+        "drupal/default_content": "2.0.0-alpha1",
         "openy/openy_memberships": "*"
     }
 }
